tests/incremental_haste_excludes/incremental_haste_excludes.exp

Initial status:
No errors!

Move A.js to B.js (excluded):
Error ----------------------------------------------------------------------------------------------------- index.js:2:9

Cannot resolve module `A`. [cannot-resolve-module]

   2| require('A');
              ^^^



Found 1 error

Move B.js to A.js:
No errors!

Done!
